Fixed new Integer() deprecation